[package]
name = "bb-cli-rs"
version = "0.1.0"
authors = ["Nithin Peter <npeter@atlassian.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
url = "2.1.1"
reqwest = { version="0.10.4", features = ["blocking", "json"] }
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
opener = "0.4.1"
colored = "1.9.3"