[package]
name = "bb"
version = "0.1.0"
authors = ["Nithin Peter <nithinpeter7@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
url = "2.1.1"
reqwest = { version="0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
opener = "0.4.1"
colored = "1.9.3"